# steps3d_vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  add_submodules.sh  build_linux.sh  build_mingw.bat  build_vs.bat  readme.md
common/: Log.h
my/: common.md  descriptor_set.md  framebuffer.md  pipeline.md
shaders/: compile.bat  simple.frag.spv  test-compute.comp  test-compute.comp.spv
src_01/: CMakeLists.txt  base-1.cpp  base-2.cpp
src_02/: CMakeLists.txt  base-3.cpp
src_03/: CMakeLists.txt  base-4.cpp
src_04/: CMakeLists.txt  base-5.cpp  base-6.cpp  base-7.cpp
src_05/: CMakeLists.txt  base-8.cpp
src_07/: CMakeLists.txt  base-9.cpp
vulkan_in_30_minutes/: en.md  ru.md
